<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_contato"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@color/black"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_dynamic_primary50">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:foregroundGravity="center"
                app:cardCornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/letter_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="34dp"
                    tools:text="H" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/email_contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <TextView
                android:id="@+id/telephone_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_telephone"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/email_contact" />

            <TextView
                android:id="@+id/email_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_email"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/telephone_contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/contact_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>